--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@squirrel-labs/peanut-sdk": "^0.0.80",
+    "bufferutil": "^4.0.7",
     "ethers": "5.7.2",
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*"
+    "ui": "workspace:*",
+    "utf-8-validate": "5.0.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
